Frontend edits for readability. Script fix so it doesn't send infinite requests to the server on completion

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -51,5 +51,6 @@ table.clipCreationTable>td{
 }
 
 .btn-upload{
-    color:lightblue;
+    background-color:lightblue;
+    color:white;
 }
